--- a/新春创造营发帖内容.md
+++ b/新春创造营发帖内容.md
@@ -107,11 +107,13 @@
 
 ## 🚀 体验链接
 
+**在线体验**：[https://cods.webredirect.org/nianshou/](https://cods.webredirect.org/nianshou/)
+
 **游戏下载地址**：`index.html`
 
 **使用方法**：
-1. 下载 `index.html` 文件
-2. 双击在浏览器中打开
+1. 在线体验：直接点击上方链接即可游玩
+2. 本地运行：下载 `index.html` 文件后双击在浏览器中打开
 3. 点击"开始游戏"按钮开始挑战
 4. 用鼠标点击屏幕上的年兽收集祝福语
 5. 在30秒内尽可能获得高分！
